templates/cockpit_template.yaml
---
# Source: cockpit/templates/api/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-cockpit-api
  labels:
    app.kubernetes.io/name: cockpit
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "4.43.0"
    app.kubernetes.io/component: "api"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: cockpit-2.0.0
  annotations:
spec:
  type: "ClusterIP"
  ports:
    - name: api-http
      port: 8063
      targetPort: api-http
      protocol: TCP
      
      
      appProtocol: http
      
      
      
    - name: api-ws
      port: 8062
      targetPort: api-ws
      protocol: TCP
      
      appProtocol: http
      
  selector:
    app.kubernetes.io/name: cockpit
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: "api"
---
# Source: cockpit/templates/generator/generator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-cockpit-swagger-generator
  labels:
    app.kubernetes.io/name: cockpit
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "4.43.0"
    app.kubernetes.io/component: "swagger-generator"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: cockpit-2.0.0
  annotations:
spec:
  type: "ClusterIP"
  ports:
    - name: swagger-generator
      port: 84
      targetPort: generator-http
      protocol: TCP
      
      appProtocol: http
      
  selector:
    app.kubernetes.io/name: cockpit
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: "swagger-generator"
---
# Source: cockpit/templates/ui/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-cockpit-ui
  labels:
    app.kubernetes.io/name: cockpit
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "4.43.0"
    app.kubernetes.io/component: "ui"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: cockpit-2.0.0
  annotations:
spec:
  type: "ClusterIP"
  ports:
    - name: ui
      port: 8002
      targetPort: ui-http
      protocol: TCP
      
      appProtocol: http
      
  selector:
    app.kubernetes.io/name: cockpit
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: "ui"
---
# Source: cockpit/templates/api/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-cockpit-api
  labels:
    app.kubernetes.io/name: cockpit
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "4.43.0"
    app.kubernetes.io/component: "api"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: cockpit-2.0.0
spec:
  strategy: 
            rollingUpdate:
              maxUnavailable: 1
            type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: cockpit
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: "api"
  template:
    metadata:
      annotations:
        chaos.alpha.kubernetes.io/enabled: "false"
        checksum/config: cf345d9d8ac37d0482e1b4168e008652ecbc73c1c2180faa46c968123485950b
      labels:
        app.kubernetes.io/name: cockpit
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/version: "4.43.0"
        app.kubernetes.io/component: "api"
    spec:
      serviceAccountName: release-name-cockpit
      
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - cockpit
                - key: app.kubernetes.io/component
                  operator: In
                  values:
                  - api
              topologyKey: kubernetes.io/hostname
            weight: 100
      nodeSelector: 
        {}
      topologySpreadConstraints: 
        []
      tolerations: 
        []
      terminationGracePeriodSeconds: 30
      containers:
        - name: release-name-cockpit-api
          image: "graviteeio/cockpit-management-api:4.43.0"
          imagePullPolicy: Always
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
          ports:
            - name: api-http
              containerPort: 8063
            - name: api-ws
              containerPort: 8062
            - name: api-technical
              containerPort: 18063
          livenessProbe: 
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 30
            tcpSocket:
              port: api-http
          readinessProbe: 
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 30
            tcpSocket:
              port: api-http
          resources: 
            limits:
              cpu: 500m
              memory: 1024Mi
            requests:
              cpu: 200m
              memory: 512Mi
          volumeMounts:
            - name: config
              mountPath: /opt/gravitee-cockpit-management-api/config/gravitee.yml
              subPath: gravitee.yml
            - name: config
              mountPath: /opt/gravitee-cockpit-management-api/config/hazelcast.xml
              subPath: hazelcast.xml
            - name: config
              mountPath: /opt/gravitee-cockpit-management-api/config/hazelcast.yml
              subPath: hazelcast.yml
            - name: config
              mountPath: /opt/gravitee-cockpit-management-api/config/logback.xml
              subPath: logback.xml            
      volumes:
        - name: config
          configMap:
            name: release-name-cockpit-api
---
# Source: cockpit/templates/generator/generator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-cockpit-swagger-generator
  labels:
    app.kubernetes.io/name: cockpit
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "4.43.0"
    app.kubernetes.io/component: "swagger-generator"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: cockpit-2.0.0
spec:
  replicas: 1
  strategy: 
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: cockpit
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: "swagger-generator"
  template:
    metadata:
      annotations:
        chaos.alpha.kubernetes.io/enabled: "false"
        checksum/config: 0eadfa831bcf450d5d7485385af2dddb2be8ec03a8af6b186d2e4a9c5010f7b0
      labels:
        app.kubernetes.io/name: cockpit
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/version: "4.43.0"
        app.kubernetes.io/component: "swagger-generator"
    spec:
      serviceAccountName: release-name-cockpit
      
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - cockpit
                - key: app.kubernetes.io/component
                  operator: In
                  values:
                  - swagger-generator
              topologyKey: kubernetes.io/hostname
            weight: 100
      nodeSelector: 
        {}
      topologySpreadConstraints: 
        []
      tolerations: 
        []
      terminationGracePeriodSeconds: 30
      containers:
        - name: release-name-cockpit-swagger-generator
          image: "graviteeio/cockpit-swagger-generator:4.43.0"
          imagePullPolicy: Always
          securityContext:  
            runAsNonRoot: true
            runAsUser: 1001
          ports:
            - name: generator-http
              containerPort: 3003
          livenessProbe: 
            failureThreshold: 3
            initialDelaySeconds: 15
            periodSeconds: 30
            tcpSocket:
              port: generator-http
          readinessProbe: 
            failureThreshold: 3
            initialDelaySeconds: 15
            periodSeconds: 30
            tcpSocket:
              port: generator-http
          resources: 
            limits:
              cpu: 500m
              memory: 1024Mi
            requests:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - name: config
              mountPath: /app/.env
              subPath: env.props
      volumes:
        - name: config
          configMap:
            name: release-name-cockpit-swagger-generator
---
# Source: cockpit/templates/ui/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-cockpit-ui
  labels:
    app.kubernetes.io/name: cockpit
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "4.43.0"
    app.kubernetes.io/component: "ui"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: cockpit-2.0.0
spec:
  strategy: 
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: cockpit
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: "ui"
  template:
    metadata:
      annotations:
        chaos.alpha.kubernetes.io/enabled: "false"
        checksum/config: 316921a8d0a6c03c6e51c95be913a58622d512475f045d2cf69e1e48553a69ae
      labels:
        app.kubernetes.io/name: cockpit
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/version: "4.43.0"
        app.kubernetes.io/component: "ui"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - cockpit
                - key: app.kubernetes.io/component
                  operator: In
                  values:
                  - ui
              topologyKey: kubernetes.io/hostname
            weight: 100
      nodeSelector: 
        {}
      topologySpreadConstraints: 
        []
      tolerations: 
        []
      terminationGracePeriodSeconds: 30
      containers:
        - name: release-name-cockpit-ui
          image: "graviteeio/cockpit-management-ui:4.43.0"
          imagePullPolicy: Always
          securityContext:
            runAsGroup: 101
            runAsNonRoot: true
            runAsUser: 101
          ports:
            - name: ui-http
              containerPort: 8080
          livenessProbe: 
            failureThreshold: 3
            httpGet:
              path: /
              port: ui-http
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe: 
            failureThreshold: 3
            httpGet:
              path: /
              port: ui-http
            initialDelaySeconds: 10
            periodSeconds: 30
          resources: 
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
          volumeMounts:
            - name: config
              mountPath: /usr/share/nginx/html/assets/config.json
              subPath: config.json
      volumes:
        - name: config
          configMap:
            name: release-name-cockpit-ui
---
# Source: cockpit/templates/api/api-ingress-ws.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-cockpit-api-ws
  labels:
    app.kubernetes.io/name: cockpit
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "4.43.0"
    app.kubernetes.io/component: "api"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: cockpit-2.0.0
  annotations:
    
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: "cockpit-controller.example.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: release-name-cockpit-api
            port:
              number: 8062
          
  tls:
    - hosts:
      - cockpit-controller.example.com
      secretName: api-custom-cert
---
# Source: cockpit/templates/api/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-cockpit-api
  labels:
    app.kubernetes.io/name: cockpit
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "4.43.0"
    app.kubernetes.io/component: "api"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: cockpit-2.0.0
  annotations:
    
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: "etag on;\nproxy_pass_header ETag;\nproxy_set_header if-match \"\";\n"
    nginx.ingress.kubernetes.io/eventsource: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "21600"
spec:
  rules:
  - host: "cockpit.example.com"
    http:
      paths:
      - pathType: Prefix
        path: /management
        backend:
          service:
            name: release-name-cockpit-api
            port:
              number: 8063
          
  tls:
    - hosts:
      - cockpit.example.com
      secretName: api-custom-cert
---
# Source: cockpit/templates/ui/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-cockpit-ui
  labels:
    app.kubernetes.io/name: cockpit
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "4.43.0"
    app.kubernetes.io/component: "ui"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: cockpit-2.0.0
  annotations:
    
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: "etag on;\nproxy_pass_header ETag;\n"
spec:
  rules:
  - host: "cockpit.example.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: release-name-cockpit-ui
            port:
              number: 8002
          
  tls:
    - hosts:
      - cockpit.example.com
      secretName: api-custom-cert
